# pygnition-1.2.0

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.in  setup.py
docs/: _TOC.md
docs/chats/: ci_versioning_template.md  project_docstring_tests.py
docs/markdown/: arguments.md  colors.md  configure.md  constants.md  driver.md  environment.md  files.md  filter.md  generate_docs_pipeline.md  ignition.md  imports.md  interpreters.md  lists.md  lumberjack.md  nbtools.md  picts.md  program.md  responses.md  server.md  settings.md  stdinput.md  tools.md  utils.md  where.md
src/: ..gitignore.swp
src/pygnition/: __init__.py  __interpreters.py  _auto_doc.py  _data_tools.py  _errors.py  _git_tools.py  _imports.py  _initools.py  _initools~.py  _last_saved_date.py  _metadata.py  _read_lines.py  _resources.py  _version.py  arguments.py  colors.py  configure.py  constants.py  data.py  driver.py  environment.py  files.py  filter.py  gui_tools.py  ignition.py  imports.py  interpreters.py  lists.py  lumberjack.py  nbtools.py  picts.py  program.py  responses.py  server.py  settings.py  startmeup.py  stdinput.py  strings.py  tools.py  user_tools.py  (+3 more)
src/pygnition/data/: description.txt  docstr_tmpl.py  emoji_subset.pkl  emojis.json  emojis.txt  envrc.txt  requirements.txt
src/pygnition/dialogs/: __init__.py  advanced.py  alerts.py  constants.py  dialog.py  progress_and_about.py  text_and_file.py
src/pygnition/etc/: config.ini  files.cfg  project.ini  server.cfg
src/scripts/: doctest_helper.py  generate_docs_pipeline.py
tests/: test_data_manager.py
(+46 files in other folders)
