[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pygnition"
version = "1.2.0"
description = "Sets up the environment for a command-line application interface."
authors = [{ name = "Russell Klein" }]
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygnition*"]
# exclude = ["etc*", "data*"]

[tool.setuptools.package-data]
pygnition = ["data/**/*"]
